vlib/v/parser/tests/fn_call_unexpected_eof_rpar_multi_arg_too_many_err.vv
import time

fn foo(i i64, s string) {}

foo(time.now(), 'foo',

